Add "add-vehicle" button
This button will be responsible for displaying the form for creating a new vehicle.

--- a/CyberpunkVehicles/wwwroot/style.css
+++ b/CyberpunkVehicles/wwwroot/style.css
@@ -1,4 +1,21 @@
+html {
+    background-color: #0f1111;
+}
+
 #cyberpunk-logo{
     width: 426px;
     height: 105px;
+}
+
+.add-vehicle-cont {
+    text-align: center;
+}
+
+.add-vehicle {
+    margin-top: 35px;
+    margin-bottom: 35px;
+    background-color: #0f1111;
+    color: #f8ef00;
+    font-size: 40px;
+    cursor: pointer;
 }
