--- a/CyberpunkVehicles/wwwroot/style.css
+++ b/CyberpunkVehicles/wwwroot/style.css
@@ -9,14 +9,24 @@ html {
 
 .add-vehicle-cont {
     text-align: center;
-}
-
-.add-vehicle {
     margin-top: 35px;
     margin-bottom: 35px;
+}
+
+
+.add-vehicle {
     background-color: #0f1111;
     color: #f8ef00;
     font-size: 40px;
+    cursor: pointer;
+}
+
+.expand-btn,
+.collapse-btn, 
+.delete-btn {
+    border: none;
+    color: #f8ef00;
+    font-size: 26px;
     cursor: pointer;
 }
 
@@ -71,6 +81,11 @@ label {
     color: #00f0ff;
 }
 
+.create-new-vehicle {
+    margin-top: 35px;
+    margin-bottom: 40px;
+}
+
 .create-new-vehicle-content {
     background-color: black;
     border-radius: 25px;
@@ -109,4 +124,44 @@ label {
 .submit-btn:hover {
     border: solid white;
     background-color: white;
+}
+
+.vehicle-content{
+    margin-bottom: 30px;
+    background-color: black;
+    border-radius: 25px;
+    border: 2px solid #f8ef00;
+    padding: 20px 20px 10px;
+    color: whitesmoke;
+}
+
+.vehicle-content .media h1,
+.vehicle-content .media h4 {
+    color: whitesmoke;
+}
+
+.vehicle-details {
+    padding-top: 10px;
+    margin-top: 20px;
+    border-top: 1px solid #f8ef00;
+}
+
+figure.image {
+    display: flex;
+    justify-content: center;
+    background-color: black;
+}
+
+figure .image img {
+    width: 480px;
+    height: 168px;
+    border-radius: 25px;
+}
+
+.expand-container {
+    text-align: center;
+}
+
+.vehicle-options {
+    text-align: right;
 }
