Add validation error messages with styling
This change displays validation errors if the user submits an invalid form.

--- a/CyberpunkVehicles/wwwroot/style.css
+++ b/CyberpunkVehicles/wwwroot/style.css
@@ -177,6 +177,10 @@ figure .image img {
     margin-bottom: 10px;
 }
 
+.create-vehicle-errors{
+    margin-bottom: 10px;
+}
+
 .vehicle-error {
     padding: 2px;
     margin-bottom: 10px;
